# hash_testing

./: CMakeLists.txt  Hashes.h  main.cpp  xxhash.c  xxhash.h
.svn/: wc.db
results/: CityHash64.txt  list_optimizations  one_test.sh  spooky32-O3.txt  spooky32-SSE.txt  superfast.txt  xxh32-642.txt  xxh32-643.txt  xxh32-MAX.txt  xxh32-NATIVE.txt  xxh32-O2.txt  xxh32-O3.txt  xxh32-SSE.txt  xxh32.txt
